crates/board-tui/tests/snapshots/snapshots__detail_actions_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #1: Update docs                                                                                      [ X ] [ □ ]┐"
"│┌Status────────────────────────────────┐ ┌Runs────────────────────────────────────────┐ ┌Comments────────────────────┐│"
"││· idle                                │ │(no runs)                                   │ │(no comments)               ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Task Configuration────────────────────┐ │                                            │ │                            ││"
"││Harness · Model: claude · default     │ │                                            │ │                            ││"
"││model · effort default effort · perm  │ │                                            │ │                            ││"
"││default permission                    │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Session───────────────────────────────┐ │                                            │ │                            ││"
"││Herdr session: default session ·      │ │                                            │ │                            ││"
"││Space: workspace:-                    │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │                                            │ │                            ││"
"│┌Description───────────────────────────┐ │                                            │ │                            ││"
"││Refresh the README and skill docs.    │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"││                                      │ │                                            │ │                            ││"
"│└──────────────────────────────────────┘ │ [ Open ]  [ Reopen ]  [ Retry ]  [ Cancel ]│ │      [ Add comment ]       ││"
"│[ Edit card ][ Duplicate ]  [ Archive ]  └────────────────────────────────────────────┘ └────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
