crates/board-tui/tests/snapshots/snapshots__detail_actions_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"[ Project: Gl… ] [ Act ] [ All ] [ Arc ]"
"            [ Board: main ]             "
"[ ‹ ] [ Todo (M) · 1/6 · 1 cards ] [ › ]"
"────────────────────────────────────────"
"┌ Card #1: Update docs      [ X ] [ □ ]┐"
"│┌Status──────────────────────────────┐│"
"││· idle                              ││"
"│└────────────────────────────────────┘│"
"│┌Task Configuration──────────────────┐│"
"││Harness · Model: claude · default m…││"
"││Herdr session: default session · Sp…││"
"│└────────────────────────────────────┘│"
"│ [ Edit ]  [ Duplicate ]  [ Archive ] │"
"│               [ Add ]                │"
"│ [ Open ]    [ Reopen ]    [ Retry ]  │"
"│              [ Cancel ]              │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
