crates/board-tui/tests/snapshots/snapshots__detail_actions_52x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"[ Project: Global ]  [ Active ] [ All ] [ Archived ]"
"                  [ Board: main ]                   "
"[ ‹ ]       [ Todo (M) · 1/6 · 1 cards ]       [ › ]"
"────────────────────────────────────────────────────"
"┌ Card #1: Update docs                  [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────┐│"
"││· idle                                          ││"
"│└────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────┐│"
"││Harness · Model: claude · default model · effort││"
"││default effort · perm default permission        ││"
"│└────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────┐│"
"││Herdr session: default session · Space:         ││"
"││workspace:-                                     ││"
"│└────────────────────────────────────────────────┘│"
"│ [ Edit ]   [ Duplicate ]   [ Archive ]   [ Add ] │"
"│ [ Open ]    [ Reopen ]    [ Retry ]   [ Cancel ] │"
"│                                                  │"
"│                                                  │"
"└──────────────────────────────────────────────────┘"
" [ + New card ]    [ Open card ]   [ Archive card ] "
"[ + New column ]  [ Edit column ]  [ Delete column ]"
" [ Move column ]    [ Template ]      [ ? Help ]    "
