crates/board-tui/tests/snapshots/snapshots__detail_actions_60x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running [  ▾ ][ … ▾ ] [ A ] [ All ] [ R ]"
"────────────────────────────────────────────────────────────"
"┌ Card #1: Update docs                          [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────┐│"
"││· idle                                                  ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default││"
"││effort · perm default permission                        ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-     ││"
"│└────────────────────────────────────────────────────────┘│"
"│   [ Edit card ]    [ Duplicate card ]  [ Archive card ]  │"
"│┌Comments────────────────────────────────────────────────┐│"
"││                    [ Add comment ]                     ││"
"│└────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────┐│"
"│[ Open worker ]  [ Reopen ]     [ Retry ]     [ Cancel ] ││"
"│└────────────────────────────────────────────────────────┘│"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" [ + Card ]   [ Open ]  [ Archive ] [ + Column ][ Edit col ]"
"  [ Del col ]  [ Move column ] [ Template ]    [ ? Help ]   "
