crates/board-tui/tests/snapshots/snapshots__detail_actions_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Card #1: Update docs                                              [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││· idle                                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default effort · perm      ││"
"││default permission                                                          ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                         ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│      [ Edit card ]           [ Duplicate card ]         [ Archive card ]     │"
"│┌Comments────────────────────────────────────────────────────────────────────┐│"
"││                              [ Add comment ]                               ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────────────────────────┐│"
"││ [ Open worker ]       [ Reopen ]          [ Retry ]          [ Cancel ]    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
