crates/board-tui/tests/snapshots/snapshots__edit_card_modal.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running     [ Global ▾ ]      [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Edit card  ·  Tab: field · Enter: save · Esc: cancel ────────────────────────┐"
"│┌ Task ─────────────────────────────────────────────────────────────────────┐▲│"
"││▌ title                                                                    │█│"
"││▏Add retry to MELI scraper                                                 │█│"
"││  description (base prompt) [ $EDITOR ]                                    │█│"
"││Add exponential backoff to the MELI scraper HTTP client.                   │█│"
"││                                                                           │█│"
"││                                                                           │││"
"││                                                                           │││"
"│└───────────────────────────────────────────────────────────────────────────┘││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
