crates/board-tui/tests/snapshots/snapshots__form_no_scrollbar_fits_100x34.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
" ◈ herdr-board ● 1 running               [ Global ▾ ]                [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────────┐┌ PLAN · AUTO · 1 ──────────────┐┌ EXECUTE · AUTO · 2 ───────────┐"
"│┌┌ New column  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ─────────────────────┐┐│"
"│││┌ Definition ────────────────────────────────────────────────────────────────────────────────┐│││"
"││││▌ name                                                                                      ││││"
"││││▏                                                                                           ││││"
"│└││  trigger                                                                                   ││┘│"
"│ ││[ ‹ ]  manual  [ › ]                                                                        ││┐│"
"│ │└────────────────────────────────────────────────────────────────────────────────────────────┘│││"
"│ │┌ Automation ────────────────────────────────────────────────────────────────────────────────┐│││"
"│ ││  on success                                                                                ││││"
"│ ││[ ‹ ]  none  [ › ]                                                                          ││┘│"
"│ ││  on fail                                                                                   ││ │"
"│ ││[ ‹ ]  none  [ › ]                                                                          ││ │"
"│ ││  fresh session                                                                             ││ │"
"│ ││[ ‹ ]  no  [ › ]                                                                            ││ │"
"│ │└────────────────────────────────────────────────────────────────────────────────────────────┘│ │"
"│ │┌ Overrides ─────────────────────────────────────────────────────────────────────────────────┐│ │"
"│ ││  model override                                                                            ││ │"
"│ ││                                                                                            ││ │"
"│ ││  effort override                                                                           ││ │"
"│ ││[ ‹ ]  default effort  [ › ]                                                                ││ │"
"│ ││  harness override                                                                          ││ │"
"│ ││[ ‹ ]  none  [ › ]                                                                          ││ │"
"│ ││  timeout (minutes)                                                                         ││ │"
"│ ││                                                                                            ││ │"
"│ │└────────────────────────────────────────────────────────────────────────────────────────────┘│ │"
"│ │                   [ Save ]                                      [ Cancel ]                   │ │"
"│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                ││                               ││                               │"
"└────────────────────────────────┘└───────────────────────────────┘└───────────────────────────────┘"
"   [ + New card ]      [ Open card ]      [ Archive card ]    [ + New column ]    [ Edit column ]   "
"    [ Delete column ]         [ Move column ]           [ Template ]              [ ? Help ]        "
