crates/board-tui/tests/snapshots/snapshots__form_no_scrollbar_fits_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
"┌ Todo · 1 · manual ──────┐┌ Plan · 1 · auto ────────┐┌ Execute · 2 · auto ────┐"
"┌ New column (Tab: field · Enter: save · Esc: cancel) ─────────────────────────┐"
"│name                                                                          │"
"│▏                                                                             │"
"│trigger                                                                       │"
"│< manual >                                                                    │"
"│on success                                                                    │"
"│< none >                                                                      │"
"│on fail                                                                       │"
"│< none >                                                                      │"
"│fresh session                                                                 │"
"│< no >                                                                        │"
"│model override                                                                │"
"│                                                                              │"
"│effort override                                                               │"
"│< (default) >                                                                 │"
"│harness override                                                              │"
"│< none >                                                                      │"
"│timeout (minutes)                                                             │"
"│                                                                              │"
"│[ Save ]  [ Cancel ]                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
"? help                                                                          "
